feat: add CreateUserModal

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -52,3 +52,15 @@ html {
 ::-webkit-resizer {
 	background-color: #3d3d3d;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+	-moz-appearance: textfield;
+}
