--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -38,7 +38,8 @@
 
 	.dark {
 		--background: 224 71% 4%;
-		--foreground: 213 31% 91%;
+		/* --foreground: 213 31% 91%; */
+		--foreground: 0 0 100%;
 
 		--muted: 223 47% 11%;
 		--muted-foreground: 215.4 16.3% 56.9%;
